--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,10 @@ a {
     text-decoration: none;
 }
 
+p {
+    font-size: 16px;
+}
+
 table {
     padding: 0;
     border-collapse: collapse;
@@ -31,7 +35,7 @@ table td + td {
     border-left: 1px solid #eee; 
 }
 
-/* NAV SECTION - this class  */
+/* NAV SECTION - this class ensures the nav bar is full screen width. */
 .topNavContainer {
     width: 100%;
     height: 70px;
@@ -64,16 +68,24 @@ table td + td {
     width: 230px;
     margin: 0;
     display: inline-block;
+    position: relative;
     height: 70px;
 }
 
 /* Actual logo text */
 .logo {
     text-align: center;
+    font-size: 2.369em;
+    margin: 0;
+    position: absolute;
+    bottom: 14px;
+    left: 12px;
 }
 
 .pageHeader {
     color: #4aaaa5;
+    font-size: 1.77em;
+    margin: 10px 0px;
 }
 
 .footer {
@@ -89,7 +101,7 @@ table td + td {
 .copyright {
     text-align: center;
     padding-top: 22px;
-    font-size: 12px;
+    font-size: .75em;
     color: #fff;
 }
 
@@ -136,6 +148,7 @@ input {
     background-color: #4aaaa5;
     color: #fff;
     padding: 10px;
+    font-size: 1em;
 }
 
 /* STYLING FOR PORTFOLIO.HTML */
@@ -165,5 +178,5 @@ input {
     color: white;
     text-align: center;
     font-family: 'Georgia', Times, 'Times New Roman', serif;
-    font-size: 1.2em;
+    font-size: 1.33em;
 }
